<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="56dp"
    android:paddingRight="24dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100sp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <!-- Email Label -->
    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/email" />

    <!-- Password Label -->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:password="true" />

    <!-- Password Label -->
    <EditText
        android:id="@+id/input_SN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:hint="@string/s_n" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/primary_color"
            android:padding="12dp"
            android:gravity="center"
            android:visibility="visible">
            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit1"
                android:visibility="invisible"
                style="@style/SpinKitView.Small.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="#ffffff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                />
            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                android:visibility="invisible"
                style="@style/SpinKitView.Small.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="#ffffff" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/no_account_yet_create_one"
        android:textSize="16sp" />

</LinearLayout>
