<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingStart="30.0dip" android:paddingTop="4.0dip" android:paddingEnd="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/device_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/rssi" />
    <LinearLayout android:orientation="vertical" android:id="@+id/device" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toStartOf="@+id/device_rssi" android:layout_centerVertical="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:id="@+id/device_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/name" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/scan_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/img_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30.0dip"
        android:contentDescription="@string/todo" />
    <ImageView android:id="@+id/bluetooth_info" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true" android:layout_centerVertical="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@+id/device"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10.0dip"
        android:background="#ffcccccc"
        android:visibility="invisible" />
</RelativeLayout>