<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/pwd_pro"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView 
            android:textSize="18.0sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/quit_this_ride_text" />
        <View 
            android:background="#ffededed" 
            android:layout_width="fill_parent" 
            android:layout_height="1dp" />
        <LinearLayout 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="40sp">
            <TextView 
                android:textColor="@color/primary_color"
                android:gravity="center" 
                android:id="@+id/blt_set_cancle_fix" 
                android:layout_width="wrap_content" 
                android:layout_height="fill_parent" 
                android:text="@string/cancel"
                android:layout_weight="1.0" />
            <View 
                android:id="@+id/view_xian" 
                android:background="#ffcccccc" 
                android:layout_width="1.0dip" 
                android:layout_height="fill_parent" />
            <TextView 
                android:textColor="@color/primary_color"
                android:gravity="center" 
                android:id="@+id/blt_set_ok_fix" 
                android:layout_width="wrap_content" 
                android:layout_height="fill_parent" 
                android:text="@string/ok"
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>