<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="300.0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="30.0dip"
        android:paddingTop="20.0dip"
        android:paddingRight="30.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/password_six_digit" />

        <EditText
            android:id="@+id/age_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:autofillHints=""
            android:gravity="center_vertical"
            android:inputType="numberPassword"
            android:padding="5.0dip"
            android:paddingStart="20.0dip"
            android:singleLine="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="10.0dip"
            android:background="#ffcccccc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="7.0dip"
                android:text="@string/ok"
                android:textColor="#ff0391f7" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="#ffcccccc" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="7.0dip"
                android:text="@string/reset_password"
                android:textColor="#ff0391f7" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="#ffcccccc" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="7.0dip"
                android:text="@string/cancel"
                android:textColor="#ff0391f7" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>