<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="86sp"
    android:layout_margin="10dp"
    android:background="#050a21"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingHorizontal="5dp"
    android:paddingTop="2dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_setting" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_more" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_bluetooth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:hapticFeedbackEnabled="false"
            android:src="@drawable/ic_bluetooth" />

    </LinearLayout>
</LinearLayout>