<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/primary_color"
    android:orientation="horizontal"
    android:padding="5dp"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:id="@+id/lay_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/lay_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:layout_weight="1"
            android:text="@string/home"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="3dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_home" />
    </LinearLayout>
</LinearLayout>
